# ArchIToken

./: .editorconfig  .env.phase7.example  .env.production.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  BetterSqlite3Driver-BI766XRT.js  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  MANIFEST.md  README.md  SECURITY.md  docker-compose.phase7.yml  docker-compose.phase8-scale.yml  docker-compose.production.yml  output.html  versions.toml
04-backend/: .dockerignore  Cargo.toml  deny.toml  openapi.yaml
04-backend/agent-orchestrator/: AGENTS.md  pyproject.toml
04-backend/database-agent-go/: go.mod
04-backend/database-manager/: Cargo.toml
04-backend/file-parsers/: Cargo.toml
04-backend/harness-core/: Cargo.toml
04-backend/migration/: Cargo.toml
04-backend/migrations/: 20260419000001_initial_schema.sql  20260419000002_rls_policies.sql  20260501000001_phase7_durable_runtime.sql  20260519000003_project_planning_studio.sql  20260521000001_project_planning_progress_control.sql  20260521000002_sjg157_semantic_dictionary.sql  20260521000003_ai_center_management.sql  20260522000001_module_file_validation_status.sql  20260523000001_quantity_costing_workflow.sql  20260525000001_auth_iam_baseline.sql  20260601000001_module_registry_16.sql  20260601000002_data_plane_progressive_split.sql  20260608000001_heavy_steel_program_truth.sql  20260609000001_component_bom_database_bridge.sql  20260609000002_heavy_steel_module_operation_runtime.sql  20260609000003_module_operation_runtime.sql  20260609000004_component_bom_import_contract.sql  20260609000005_module_operation_runtime_integrity.sql  20260609000005_operations_audit_log_archive.sql  20260609000006_backup_restore_dr_contract.sql  20260609000007_module_file_operation_runtime_bridge.sql  20260609000008_module_transaction_operation_runtime_bridge.sql  20260609000009_module_operation_runtime_summary.sql  20260610000001_database_ops_maturity_and_heavy_steel_e2e.sql  20260611000001_audit_events_append_only.sql  20260611000002_documented_name_compat_views.sql  20260611000004_project_scope_rls.sql  20260611000005_bom_master_data.sql  20260611000006_material_takeoff_procurement_bom.sql  20260611000007_manufacturing_bom.sql  20260611000008_installation_bom.sql  20260611000009_shipment_bom.sql  20260611000010_demand_quote_bom.sql  20260611000011_concept_planning_bom.sql  20260611000012_archive_package_bom.sql  20260612000001_cost_voucher_drafts.sql  20260612000002_module_operation_lifecycle_audit_fix.sql
04-backend/scripts/: certify-phase8-100k.sh  generate-synthetic-bom-fixtures.py  guard-proprietary-runtime.sh  import-sjg157-semantic-dictionary.py  import-steel-component-naming-rules.py  load-phase8-100k.sh  phase8-certify-from-evidence.sh  phase8-run-100k.sh  phase8-run-10k.sh  phase8-run-1k.sh  phase8-run-25k.sh  phase8-run-50k.sh  phase8-run-smoke.sh  production-smoke-fixture.py  run-database-manager-local.sh  smoke-all.sh  smoke-artifacts.sh  smoke-assets-phase7.sh  smoke-backup-restore-drill.sh  smoke-bom-db-bridge-synthetic.sh  smoke-bom-derivation-chain.sh  smoke-cad.sh  smoke-context.sh  smoke-conversion-jobs.sh  smoke-data-plane.sh  smoke-data-services.sh  smoke-database-agent-go.sh  smoke-documents.sh  smoke-generation.sh  smoke-gis.sh  smoke-health.sh  smoke-heavy-steel-database-bridge.sh  smoke-heavy-steel-end-to-end-readiness.sh  smoke-jwt.py  smoke-module-file-operation-runtime.sh  smoke-module-operation-runtime.sh  smoke-module-transaction-operation-runtime.sh  smoke-openbim-claim-gates.sh  smoke-openbim.sh  smoke-operations-audit-log-archive.sh  (+14 more)
04-backend/shared/: Cargo.toml
06-workers/: .gitignore  README.md  architoken-worker-env.sh  engine_server.py  pyproject.toml
06-workers/architoken_workers/: __init__.py  adapter_requirements.py  ai_generation_worker.py  blender_plugin_worker.py  blender_worker.py  bsdd_worker.py  build123d_worker.py  cad_worker.py  cadquery_worker.py  cesium_worker.py  cgal_worker.py  comfyui_media_command.py  component_bom_worker.py  contract.py  diagram_worker.py  docling_worker.py  document_worker.py  engine_registry.py  engineering_native_workbench_server.py  external_app_worker.py  floorplan_worker.py  forgecad_worker.py  freecad_worker.py  gis_worker.py  hf_media_command.py  huggingface_generation_registry.py  ids_worker.py  ifcdb_agent_worker.py  image_worker.py  io.py  media_worker.py  ocr_worker.py  office_worker.py  openbim_evidence_worker.py  openbim_standards_worker.py  openbim_worker.py  panorama_worker.py  pdf_worker.py  pointcloud_worker.py  runtime.py  (+5 more)
06-workers/data/: sjg157_semantic_dictionary.json
06-workers/examples/: comfyui-floorplan-controlnet-workflow.json  officecli-poc-job.json  paddleocr-pdf-ocr-job.json  stirling-pdf-merge-job.json
06-workers/scripts/: architoken_3dm_to_ifc.py  architoken_cad_to_ifc.py  architoken_dwg_to_ifc.py  architoken_dxf_to_bom.py  architoken_dxf_to_ifc.py  architoken_ifc_edit.py  architoken_ifc_enrich.py  architoken_ifc_to_bom.py  architoken_ifc_validate.py  architoken_pdf_to_bom.py  architoken_skp_sidecar_client.py  architoken_step_to_bom.py  architoken_usd_to_bom.mjs  engineering-native-workbench-entrypoint.sh  ifc_semantic_enrich.py  panaec-3dm-to-ifc  panaec-cad-to-ifc  panaec-drawing-to-bom  panaec-dwg-to-ifc  panaec-dxf-to-ifc  panaec-ifc-edit  panaec-ifc-enrich  panaec-ifc-to-bom  panaec-ifc-validate  panaec-pdf-to-bom  panaec-skp-to-glb  panaec-skp-to-ifc  panaec-step-to-bom  panaec-usd-to-bom  sjg157_classify.py  test_ifc_semantic_enrich.py  test_sjg157_classify.py
06-workers/tests/: test_3dm_to_ifc_sidecar.py  test_ai_generation_worker.py  test_cad_worker.py  test_component_bom_worker.py  test_contract.py  test_document_worker.py  test_engine_boundary_workers.py  test_engine_server.py  test_floorplan_worker.py  test_gis_worker.py  test_ifcdb_agent_worker.py  test_image_worker.py  test_openbim_evidence_worker.py  test_openbim_standards_worker.py  test_openbim_worker.py  test_runtime.py  test_skp_sidecar_client.py  test_source_build.py  test_steel_platform_worker.py  (+1 more)
(+1393 files in other folders)
