# Cargo.toml — ArchIToken Rust Workspace
# License: Apache-2.0 OR MIT
# Rust: 1.95.0 (2026-04-16)
# 版本全部补丁级钉住 (宪法 §4)

[workspace]
resolver = "3"
members = [
    "file-parsers",
    "harness-core",
    "migration",
    "shared",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0 OR MIT"
authors = ["ActiveInAI <ActiveInAI@outlook.com>"]
repository = "https://github.com/ActiveInAI/ArchIToken"

[workspace.dependencies]
# --- Async Runtime ---
tokio = { version = "=1.48.0", features = ["full", "tracing"] }
tokio-util = "=0.7.16"
tokio-stream = "=0.1.17"
futures = "=0.3.31"
async-trait = "=0.1.89"

# --- HTTP / REST ---
axum = { version = "=0.8.9", features = ["macros", "multipart", "ws", "tokio"] }
axum-extra = { version = "=0.12.6", features = ["typed-header", "cookie"] }
tower = { version = "=0.5.3", features = ["timeout", "limit"] }
tower-http = { version = "=0.6.6", features = ["cors", "compression-full", "trace", "timeout"] }
hyper = { version = "=1.9.0", features = ["full"] }

# --- gRPC ---
tonic = { version = "=0.14.5", features = ["transport", "tls-ring", "tls-native-roots", "gzip"] }
tonic-build = "=0.14.5"
prost = "=0.14.3"
prost-types = "=0.14.3"

# --- OpenAPI ---
utoipa = { version = "=5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = "=9.0.2"

# --- Database (SeaQL Stack) ---
sea-orm = { version = "=2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = { version = "=2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-uuid", "with-json"] }
sea-query = "=1.0.0-rc.33"
sea-schema = "=0.16.2"
seaography = "=1.1.4"
sea-streamer = "=0.5.2"
sqlx = { version = "=0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "migrate"] }

# --- Redis-compatible (Valkey 8-alpine baseline) ---
deadpool-redis = "=0.22.0"
redis = { version = "=1.2.0", features = ["tokio-rustls-comp", "cluster-async"] }

# --- Serialization ---
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
toml = "=0.9.8"
base64 = "=0.22.1"

# --- Observability ---
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
tracing-opentelemetry = "=0.32.0"
opentelemetry = "=0.31.0"
opentelemetry-otlp = { version = "=0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "=0.31.0", features = ["rt-tokio"] }
metrics = "=0.24.3"
metrics-exporter-prometheus = "=0.18.0"

# --- AEC File Format Parsers (Rust) ---
dxf = "=0.6.1"               # DXF backup
lopdf = "=0.40.0"
fullbleed = "=0.6.11"         # HTML/CSS -> PDF deterministic
quick-xml = { version = "=0.39.2", features = ["serialize"] }
xsd-parser = "=1.5.2"
tree-sitter-ifc = "=0.1.0"
csgrs = "=0.20.1"
fj = "=0.49.0"                # B-rep CAD kernel

# --- Utilities ---
uuid = { version = "=1.13.0", features = ["v4", "v7", "serde"] }
chrono = { version = "=0.4.41", features = ["serde"] }
anyhow = "=1.0.100"
thiserror = "=2.0.17"
eyre = "=0.6.12"
color-eyre = "=0.6.5"
itertools = "=0.14.0"
bytes = "=1.11.1"
dashmap = "=6.1.0"
once_cell = "=1.21.4"
parking_lot = "=0.12.5"

# --- Cryptography ---
rustls = "=0.23.38"
rustls-pemfile = "=2.2.0"
ring = "=0.17.14"
argon2 = "=0.6.0-rc.8"
jsonwebtoken = { version = "=10.0.0", default-features = false, features = ["aws_lc_rs"] }

# --- HTTP Client ---
reqwest = { version = "=0.12.24", features = ["json", "rustls-tls", "stream", "multipart", "blocking"] }

# --- Validation ---
validator = { version = "=0.20.0", features = ["derive"] }
garde = { version = "=0.22.1", features = ["derive", "full"] }

# --- Config ---
config = "=0.15.17"
dotenvy = "=0.15.7"

# --- Testing ---
proptest = "=1.8.0"
quickcheck = "=1.0.3"
mockito = "=1.7.2"
wiremock = "=0.6.5"
insta = { version = "=1.44.0", features = ["yaml"] }
criterion = { version = "=0.8.2", features = ["html_reports"] }
temp-env = "=0.3.6"

# --- MCP (Model Context Protocol) ---
rmcp = "=1.5.0"  # Official Rust MCP SDK

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
debug = true
