[project]
name = "architoken-workers"
version = "0.1.0"
description = "ArchIToken production worker adapter contracts"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]
production = [
    "boto3>=1.35,<2",
    "nats-py>=2.9,<3",
    "opentelemetry-api>=1.31,<2",
    "opentelemetry-sdk>=1.31,<2",
    "opentelemetry-exporter-otlp>=1.31,<2",
]
bim = ["ifcopenshell>=0.8", "ifctester>=0.8"]
cad = ["ezdxf>=1.3", "cadquery>=2.5", "build123d>=0.9"]
geometry = ["pygalmesh>=0.10"]
speckle = ["specklepy>=3.0"]
document = ["docling>=2.0", "markitdown[all]>=0.1", "mineru>=2.0"]
image = ["opencv-python-headless>=4.10"]
ocr = ["paddleocr>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
