[project]
name = "insomeos-agent-orchestrator"
version = "2.0.0"
description = "InsomeOS L4 · LangGraph agent orchestration for AEC workflows"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "ActiveInAI", email = "ActiveInAI@outlook.com" }]

dependencies = [
    # Constitution §4: patch-pinned
    "langgraph==1.1.8",
    "langchain-core==1.3.0",
    "langchain-community==0.4.15",
    "langchain-anthropic==0.4.10",
    "langchain-openai==0.4.18",
    "langchain-ollama==0.3.12",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "fastapi==0.122.0",
    "uvicorn[standard]==0.39.1",
    "httpx==0.29.1",
    "asyncpg==0.31.1",
    "redis==5.3.3",
    "openai==2.3.5",
    "anthropic==0.46.2",
    "opentelemetry-api==1.31.0",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-instrumentation-fastapi==0.52b0",
    "opentelemetry-exporter-otlp==1.31.0",
    "structlog==25.8.0",
    "tenacity==10.0.1",
    "python-multipart==0.0.24",
    "orjson==3.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.14.4",
    "mypy==1.18.2",
    "black==25.12.0",
    "types-redis==4.6.0.20241004",
    "hypothesis==6.119.4",
]

[project.scripts]
insomeos-agent = "insomeos_agent.main:main"

[build-system]
requires = ["hatchling==1.27.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insomeos_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-select = ["E", "F", "W", "I", "B", "UP", "C4", "PT", "RET", "SIM", "ARG"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
