[project]
name = "insomeos-agent-orchestrator"
version = "2.0.0"
description = "InsomeOS L4 · LangGraph agent orchestration for AEC workflows"
readme = { text = "InsomeOS L4 LangGraph agent orchestration for AEC workflows.", content-type = "text/markdown" }
requires-python = ">=3.13,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "ActiveInAI", email = "ActiveInAI@outlook.com" }]

dependencies = [
    # Python AI stack: bounded compatible ranges
    "langgraph>=1.1,<2",
    "langchain-core>=1.3,<2",
    "langchain-community>=0.4,<0.5",
    "langchain-anthropic>=1.4,<2",
    "langchain-openai>=1.2,<2",
    "langchain-ollama>=1.1,<2",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.46,<0.47",
    "httpx[socks]>=0.28,<0.29",
    "asyncpg>=0.31,<0.32",
    "redis>=7.4,<8",
    "openai>=2.33,<3",
    "anthropic>=0.97,<0.98",
    "opentelemetry-api>=1.41.1,<1.42",
    "opentelemetry-sdk>=1.41.1,<1.42",
    "opentelemetry-instrumentation-fastapi>=0.62b1,<0.63",
    "opentelemetry-exporter-otlp>=1.41.1,<1.42",
    "structlog>=25.5,<26",
    "tenacity>=9.1,<10",
    "python-multipart>=0.0.27,<0.1",
    "orjson>=3.11,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15,<0.16",
    "mypy>=1.20,<2",
    "black>=26.3,<27",
    "hypothesis>=6.152,<7",
]

[project.scripts]
insomeos-agent = "insomeos_agent.main:main"

[build-system]
requires = ["hatchling>=1.29,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insomeos_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "B", "UP", "C4", "PT", "RET", "SIM", "ARG"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
