[package]
name = "architoken-database-manager"
description = "Apache-2.0 Rust core for ArchIToken Database Manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
authors.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
name = "architoken_database_manager"
path = "src/lib.rs"
