[package]
name = "architoken-migration"
description = "ArchIToken SeaORM migrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "architoken_migration"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "architoken-migration"
path = "src/main.rs"
