[package]
name = "insomeos-shared"
description = "Shared types and utilities across InsomeOS Rust crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }

[lib]
path = "src/lib.rs"
